--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,9 +8,19 @@
       <ul class="list-group">
         <% @cocktails.each do |cocktail| %>
           <li class="list-group-item">
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+
+            <% if cocktail.photo.attached? %>
+
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+
+            <% else %>
+
+
+            <% end %>
             <%= link_to cocktail.name, cocktail_path(cocktail) %>
+
             </div>
+
           </li>
         <% end %>
       </ul>
